# dangirsh.org

./: .gitignore  BUILD_MACOS.md  README.md  README.org  build.sh  default.nix  publi.sh  setup_ssh_key.sh  stack.yaml  stats.sh
generator/: cabal.project  site.cabal  site.hs
logseq/: metadata.edn
site/: about.markdown  about.md  contact.markdown  contact.md  dangirsh.cabal  index.html
site/css/: default.css
site/doc/: gpg.txt
site/drafts/: differentiable_programming_julia.org  haskell_contextuality.org
site/misc/: quotes.org
site/posts/: binding.org  foundations_journal_club.org  living_in_org_roam.org  popularizing_quantum_contextuality.org  test.org  that_funnai_feeling.org  zettelkasten.org
site/projects/: doom-config.org  neurosys.org
site/templates/: default.html
