name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll >= 4.16 && < 4.17
                  , pandoc >= 3.0 && < 3.6
                  , pandoc-types >= 1.23
                  , containers
  ghc-options:      -threaded
  default-language: Haskell2010
